--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,11 @@ body {
 	padding: 2px;
 	box-shadow: inset 1px 1px 0 0 rgba(255,255,255,.5),inset -1px -1px 0 0 rgba(0,0,0,.5);
 	display: flex;
-	margin-bottom: 10em;
+	font-size: 10px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
 	> * {
 		flex: 1 1 auto;
 		&:not(:last-child) {
@@ -42,8 +46,8 @@ body {
 		color: #fff;
 		background: transparent;
 		border: none;
-		font-family: tahoma, sans-serif;
-		font-size: 8px;
+		font-family: inherit;
+		font-size: inherit;
 		box-shadow: inset 1px 1px 0 0 rgba(255,255,255,.5),inset -1px -1px 0 0 rgba(0,0,0,.5);
 		display: block;
 	}
@@ -55,12 +59,15 @@ body {
 	}
 }
 
+#app {
+	margin-top: 8rem;
+}
+
 .object {
 	background-size: contain;
 	width: 4rem;
 	height: 4rem;
 	position: relative;
-	margin: 1em;
 	float: left;
 	image-rendering: pixelated;
 	&.factory {
