--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,10 +1,16 @@
 @import 'reset.scss';
 
+@font-face {
+    font-family: 'munro';
+    src: url('../fonts/munro/munro-webfont.woff2') format('woff2'),
+         url('../fonts/munro/munro-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 :root {
-	-webkit-font-smoothing: none;
-	font-smoothing: none;
-	font: 8px tahoma, sans-serif;
-	letter-spacing: 1px;
+	font: 10px munro, sans-serif;
 }
 
 * {
@@ -24,7 +30,6 @@ body {
 	padding: 2px;
 	box-shadow: inset 1px 1px 0 0 rgba(255,255,255,.5),inset -1px -1px 0 0 rgba(0,0,0,.5);
 	display: flex;
-	font-size: 10px;
 	position: fixed;
 	top: 0;
 	left: 0;
